Add speech-synthesis demo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Test App</title>
   </head>
   <body>
-    <h1>Github pages testing...</h1>
+    <a href="./spsy/index.html">Speech synthesiser demo</a>
   </body>
 </html>
 
