--- a/spsy/index.html
+++ b/spsy/index.html
@@ -8,16 +8,29 @@
   </head>
   <body>
     <h1>Speech synthesiser demo</h1>
-
+    <h3 id="state">waiting...</h3>
     <select></select>
 
     <form>
-      <input type="text" id="inputTxt"></input>
+      <input type="text" id="inputTxt" value="The touchstart event occurs when the user touches an element"></input>
       <button type="submit" id="playBtn">Play</button>
     </form>
-    
-    <script src="script.js"></script>
+   
+    <div>
+      <button type="button" id="pauseBtn">Pause</button>
+      <button id="resumeBtn">Resume</button>
+      <button id="cancelBtn">Cancel</button>
+    </div>
 
+    <div>
+      <button id="readPaused">Read paused</button>
+      <button id="readPending" hidden>Read pending</button>
+      <button id="readSpeaking">Read speaking</button>
+    </div>
+
+    <p id="propVal"></p>
+
+    <script src="script.js"></script>
   </body>
 
 </html>
