Change from input to textarea for inputTxt

--- a/spsy/index.html
+++ b/spsy/index.html
@@ -12,7 +12,7 @@
     <select></select>
 
     <form>
-      <input type="text" id="inputTxt" value="The touchstart event occurs when the user touches an element"></input>
+      <textarea id="inputTxt">The touchstart event occurs when the user touches an element.</textarea>
       <button type="submit" id="playBtn">Play</button>
     </form>
    
