Add speech recognition demo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Test App</title>
   </head>
   <body>
-    <a href="./spsy/index.html">Speech synthesiser demo</a>
+    <a href="./spsy/index.html">Speech synthesiser Demo</a>
+    <a href="./sprec/index.html">Speech Recognition Demo</a>
   </body>
 </html>
 
