Rename each demo dir name

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Test App</title>
   </head>
   <body>
-    <a href="./spsy/index.html">Speech synthesiser Demo</a>
-    <a href="./sprec/index.html">Speech Recognition Demo</a>
+    <h3>Demo List:</h3>
+    <ul>
+      <li><a href="./speech_synthesiser/index.html">Speech synthesiser</a></li>
+      <li><a href="./speech_recognition/index.html">Speech Recognition</a></li>
+    </ul>
   </body>
 </html>
 
