Rename top page title

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test App</title>
+    <title>Demo</title>
   </head>
   <body>
-    <h3>Demo List:</h3>
+    <h1>Demo List:</h1>
     <ul>
       <li><a href="./speech_synthesiser/index.html">Speech synthesiser</a></li>
       <li><a href="./speech_recognition/index.html">Speech Recognition</a></li>
