Add testtest js

--- a/speech_recognition/index.html
+++ b/speech_recognition/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="root">
-      <h3 id="output">Click/Touch and start</h3>
+      <h3 id="output">Click and start</h3>
     </div>
     <script type='text/javascript' src="script.js" async></script>
   </body>
